--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ node_modules/
 # Test results and reports
 test-results/
 playwright-report/
+# VScode settings
+.vscode/
+# github configs
+.github/    
